# ai-contract-guardian

./: .env.example  .gitignore  AI_CONTRACT_GUARDIAN_FIXES.md  ANALYSE_SOLUTIONS_RECHERCHE_WEB.md  AUDIT_PRE_LANCEMENT.md  AUDIT_RGPD_CHIFFREMENT.md  CHANGELOG.md  CLES_API_TESTS_JOURJ.md  DOCUMENTATION_CONFORMITE.md  QUALITY_PLAN.md  QUALITY_REPORT.md  README.md  docker-compose.yml  test_runner.py
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  mypy.ini  pyproject.toml  requirements.txt  setup.cfg
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_performance_indexes.py
backend/app/: celery_app.py  config.py  main.py
backend/app/api/: analysis_v2.py  auth.py  contracts.py  health.py  users.py
backend/app/core/: cache.py  confidence.py  legal_search.py  metrics.py  rate_limit.py  security.py  security_middleware.py
backend/app/db/: session.py
backend/app/models/: __init__.py  analysis.py  base.py  contract.py  user.py
backend/app/prompts/: legal_analysis.py
backend/app/services/: analysis_enhanced.py  claude_service.py  resend_service.py  text_extractor.py
backend/app/tasks/: analysis.py
backend/scripts/: backup-db.sh
backend/tests/: conftest.py  test_api.py  test_auth.py  test_contracts.py  test_health.py  test_legal_search.py  test_metrics.py  test_models.py  test_resend_service.py  test_services.py  test_users.py
docs/: SECURITY_CHECKLIST.md
docs/architecture/: ARCHITECTURE_AI_CONTRACT_GUARDIAN.md  ARCHITECTURE_AI_CONTRACT_GUARDIAN_FINAL.md  (+4 more)
frontend/: .eslintrc.json  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/app/: layout.tsx  (+1 more)
test-contracts/: CGV-ecommerce.txt  contrat-franchise.txt  contrat-prestation-desequilibre.txt  contrat-travail-abusif.txt  licence-logiciel-americain.txt
(+28 files in other folders)
